# emissary

./: Dockerfile
.github/workflows/: ci.yml  docker-publish.yml
docs/: development.md  embedding-rust.md  quick-start.md  router-configuration.md
emissary-cli/: Cargo.toml
emissary-cli/src/: cli.rs  config.rs  main.rs
emissary-cli/src/tools/: devnet.rs  mod.rs  router_ui_dev.rs
emissary-cli/src/ui/: mod.rs
emissary-cli/src/ui/dioxus/: bandwidth.rs  bandwidth_monitor.rs  config.rs  dashboard.rs  mod.rs  native.rs  sidebar.rs  style.rs  svg.rs  types.rs  util.rs  web.rs
emissary-cli/src/ui/dioxus/address_book/: add_destination.rs  browse.rs  configure.rs  mod.rs
emissary-cli/src/ui/dioxus/hidden_services/: client.rs  mod.rs  overview.rs  server.rs
emissary-cli/src/ui/dioxus/settings/: advanced.rs  client.rs  mod.rs  proxies.rs  transports.rs  tunnels.rs
emissary-core/src/: config.rs  events.rs  lib.rs
emissary-core/src/primitives/: router_info.rs
emissary-core/src/sam/: parser.rs  session.rs
emissary-core/src/transport/: mod.rs
emissary-core/src/transport/ntcp2/: mod.rs
emissary-core/src/transport/ssu2/: mod.rs
emissary-core/src/transport/ssu2/peer_test/: mod.rs
emissary-core/src/transport/ssu2/relay/: mod.rs
emissary-core/src/transport/ssu2/session/pending/: inbound.rs  outbound.rs
emissary-core/tests/: ipv6.rs  ml_kem.rs  sam.rs
emissary-util/src/port_mapper/: nat_pmp.rs
examples/rust-tutorial/src/: main.rs
