[package]
name = "emissary-cli"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
arboard = "3"
axum = { version = "0.8.4", default-features = false, features = ["ws", "macros", "tokio", "http1"], optional = true }
clap = { workspace = true, features = ["derive"] }
emissary-core = { path = "../emissary-core", version = "0.4.0" }
emissary-util = { path = "../emissary-util", version = "0.4.0", features = ["tokio"] }
futures = "0.3.31"
httparse = "1.10.1"
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
tokio-tungstenite = { version = "0.27.0", default-features = false, features = ["native-tls"], optional = true }
url = "2.5.4"

scraper = { version = "0.21", optional = true }
ego-tree = { version = "0.9", optional = true }

# workspace dependencies
anyhow = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true, features = ["log"] }
yosemite = { workspace = true }
dioxus = { version = "=0.7.3", optional = true }
dioxus-core = { version = "=0.7.3", optional = true }
dioxus-liveview = { version = "=0.7.3", features = ["axum"], optional = true }

[dev-dependencies]
fast-socks5 = { version = "1.0.0", features = ["socks4"] }

[features]
default = ["ui"]
ui = ["dioxus/desktop", "dioxus/liveview", "dioxus-liveview","axum"]
metrics = ["emissary-util/metrics"]
